// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferScheduleCronComponent should have a good default state if a daily expression is passed 1`] = `
<pf-transfer-schedule-cron
  cronArray={[Function Array]}
  cronExpression={[Function String]}
  cronExpressionChanges={[Function EventEmitter]}
  dailyChecked={[Function Boolean]}
  daysOfWeek={[Function Array]}
  defaultDay={[Function Object]}
  id={[Function Number]}
  monthlyChecked="false"
  weeklyChecked="false"
  weeksOfMonth={[Function Array]}
>
  <div>
    <div
      class="summary text-center"
    >
      
      
      <div>
        
        <div>
          <h4
            class="font-weight-light"
          >
            <b>
              Daily
            </b>
          </h4>
        </div>
        
        
        
        
        <div
          class="sync-info"
        >
          <h5
            class="font-weight-light font-italic"
          >
            Never Synchronized
          </h5>
        </div>
      </div>
    </div>
  </div>
</pf-transfer-schedule-cron>
`;

exports[`TransferScheduleCronComponent should have a good default state if a monthly expression is passed 1`] = `
<pf-transfer-schedule-cron
  cronArray={[Function Array]}
  cronExpression={[Function String]}
  cronExpressionChanges={[Function EventEmitter]}
  dailyChecked="false"
  daysOfWeek={[Function Array]}
  defaultDay={[Function Object]}
  defaultDayOfWeek={[Function Object]}
  defaultWeekOfMonth={[Function Object]}
  id={[Function Number]}
  monthlyChecked={[Function Boolean]}
  monthlyDayValue={[Function String]}
  monthlyWeekOfMonthValue={[Function String]}
  weeklyChecked="false"
  weeksOfMonth={[Function Array]}
>
  <div>
    <div
      class="summary text-center"
    >
      
      
      <div>
        
        
        
        <div>
          <h4
            class="font-weight-light"
          >
            Every 
            <b>
              2nd
              Monday
            </b>
             of the month
          </h4>
        </div>
        
        
        <div
          class="sync-info"
        >
          <h5
            class="font-weight-light font-italic"
          >
            Never Synchronized
          </h5>
        </div>
      </div>
    </div>
  </div>
</pf-transfer-schedule-cron>
`;

exports[`TransferScheduleCronComponent should have a good default state if a weekly expression is passed 1`] = `
<pf-transfer-schedule-cron
  cronArray={[Function Array]}
  cronExpression={[Function String]}
  cronExpressionChanges={[Function EventEmitter]}
  dailyChecked="false"
  dayValue={[Function String]}
  daysOfWeek={[Function Array]}
  defaultDay={[Function Object]}
  id={[Function Number]}
  monthlyChecked="false"
  weeklyChecked={[Function Boolean]}
  weeksOfMonth={[Function Array]}
>
  <div>
    <div
      class="summary text-center"
    >
      
      
      <div>
        
        
        <div>
          <h4
            class="font-weight-light"
          >
            Weekly on 
            <b>
              Tuesdays
            </b>
          </h4>
        </div>
        
        
        
        <div
          class="sync-info"
        >
          <h5
            class="font-weight-light font-italic"
          >
            Never Synchronized
          </h5>
        </div>
      </div>
    </div>
  </div>
</pf-transfer-schedule-cron>
`;

exports[`TransferScheduleCronComponent should have a good default state if no expression is passed 1`] = `
<pf-transfer-schedule-cron
  cronArray={[Function Array]}
  cronExpressionChanges={[Function EventEmitter]}
  dailyChecked="false"
  daysOfWeek={[Function Array]}
  defaultDay={[Function Object]}
  monthlyChecked="false"
  weeklyChecked="false"
  weeksOfMonth={[Function Array]}
>
  <div>
    <div
      class="summary text-center"
    >
      
      
      <div>
        
        
        
        
        
        <div
          class="sync-info"
        >
          <h5
            class="font-weight-light font-italic"
          >
            Never Synchronized
          </h5>
        </div>
      </div>
    </div>
  </div>
</pf-transfer-schedule-cron>
`;
